applications/v5/backend/src/main/java/com/example/weeklyplanning/web/rest/errors/ConflictException.java
package com.example.weeklyplanning.web.rest.errors;

public class ConflictException extends RuntimeException {

    public ConflictException(String message) {
        super(message);
    }
}
